--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -4,9 +4,23 @@
     <a class="navbar-brand" href="{% url 'main' %}">Главная</a>
     <ul class="nav nav-pills">
       <li class="nav-item">
-        <a class="nav-link" href="#scrollspyHeading1">Первый</a>
+        <a class="nav-link" href="">{{user.username}}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#scrollspyHeading2">Второй</a>
+        <a class="nav-link" href="/auth/signup/">Регистрация</a>
       </li>
   </nav>
+{% else %}
+<nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
+  <a class="navbar-brand" href="{% url 'main' %}">Главная</a>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+      <a class="nav-link" href="">Вход</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/auth/signup/">Регистрация</a>
+    </li>
+</nav>
+{% endif %}
+{% block content %}
+{% endblock %}
