--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,26 +1,26 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <title>{% block title %}Название тут{% endblock %}</title>
+
 <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-    <a class="navbar-brand" href="{% url 'main' %}">Главная</a>
-    <ul class="nav nav-pills">
+  <a class="navbar-brand" href="{% url 'main' %}">Главная</a>
+  <ul class="nav nav-pills">
+    {% if user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="">{{user.username}}</a>
+        <a class="nav-link" href="">Выход</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="">{{ user.username }}</a>
+      </li>
+    {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="/auth/login/">Вход</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/auth/signup/">Регистрация</a>
       </li>
-  </nav>
-{% else %}
-<nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-  <a class="navbar-brand" href="{% url 'main' %}">Главная</a>
-  <ul class="nav nav-pills">
-    <li class="nav-item">
-      <a class="nav-link" href="">Вход</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/auth/signup/">Регистрация</a>
-    </li>
+    {% endif %}
+  </ul>
 </nav>
-{% endif %}
+
 {% block content %}
 {% endblock %}
