--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,7 +9,7 @@
         <a class="nav-link" href="">Выход</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">{{ user.username }}</a>
+        <a class="nav-link" href="{% url 'people:profile' user.username %}">{{ user.username }}</a>
       </li>
     {% else %}
       <li class="nav-item">
