--- a/main/templates/people/profile.html
+++ b/main/templates/people/profile.html
@@ -1,2 +1,36 @@
-{% extends "base_profile.html" %}
-{% block title%}Профиль{% endblock %}
+{% extends "base.html" %}
+<title>{% block title %}Профиль пользователя: {{ user.username }}{% endblock %}</title>
+{% block content %}
+<div class="container mt-4">
+  <h2 class="mt-4 mb-4">Профиль пользователя: {{ user.username }}</h2>
+
+  <form method="post" action="{% url 'people:profile' username=user.username %}" class="mb-4">
+    {% csrf_token %}
+    {{ form.as_p }}
+  </form>
+  {% if user_profile.age %}
+    <strong>
+    <p class="mb-2">Возраст: {{ user_profile.age }}</p>
+    </strong>
+  {% else %}
+    <strong>
+    <p class="mb-2">Возраст: не указан</p>
+    </strong>
+  {% endif %}
+
+  {% if user_profile.gender %}
+    <strong>
+    <p class="mb-2">Пол: {{ user_profile.gender }}</p>
+    </strong>
+  {% else %}
+    <strong>
+    <p class="mb-2">Пол: не указан</p>
+    </strong>
+  {% endif %}
+
+  <div class="row">
+    <a href="{% url 'people:edit_profile' username=user.username %}" class="btn btn-secondary">Редактировать профиль</a>
+  </div>
+</div>
+
+{% endblock %}
