--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -6,7 +6,7 @@
   <ul class="nav nav-pills">
     {% if user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="">Выход</a>
+        <a class="nav-link" href="/auth/logout/">Выход</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'people:profile' user.username %}">{{ user.username }}</a>
