--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -4,7 +4,7 @@
 <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
   <a class="navbar-brand" href="/home/">Главная</a>
   <ul class="nav nav-pills">
-    {% if user.is_authenticated %}
+    {% if request.user %}
       <li class="nav-item">
         <a class="nav-link" href="/auth/logout/">Выход</a>
       </li>
