--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -5,6 +5,9 @@
   <a class="navbar-brand" href="/home/">Главная</a>
   <ul class="nav nav-pills">
     {% if request.user %}
+    <li class="nav-item">
+      <a class="nav-link" href="">Создать +</a>
+    </li>
       <li class="nav-item">
         <a class="nav-link" href="/auth/logout/">Выход</a>
       </li>
