--- a/main/templates/Content/create_post.html
+++ b/main/templates/Content/create_post.html
@@ -5,7 +5,7 @@
     <div class="col-md-8 p-5">
       <div class="card">
         <div class="card-header">
-          Редактировать профиль
+          Создать пост
         </div>
         <div class="card-body">
           {# Этот блок будет показан, если в форме есть ошибки #}
