--- a/main/templates/Content/main_page.html
+++ b/main/templates/Content/main_page.html
@@ -2,3 +2,21 @@
 {% block title %}
     Главная
 {% endblock %}
+{% block content %}
+    {% if posts %}
+        <div class="container mt-4">
+            <div class="row justify-content-center">
+                {% for post in posts %}
+                    <div class="card m-3" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ post.theme }}</h5>
+                            <p class="card-text">{{ post.text }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    {% else %}
+        <h1><strong>Нет постов</strong></h1>
+    {% endif %}
+{% endblock %}
