--- a/main/templates/Content/main_page.html
+++ b/main/templates/Content/main_page.html
@@ -1,21 +1,24 @@
 {% extends "base.html" %}
+{% load static %}
 {% block title %}
     Главная
 {% endblock %}
 {% block content %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    
     {% if posts %}
         <div class="container mt-4">
-            <div class="row justify-content-center">
-                {% for post in posts %}
-                    <div class="card m-3" style="width: 18rem;">
+            {% for post in posts %}
+                <div class="row justify-content-center mb-3">
+                    <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-subtitle">{{ post.theme }}</h5>
                             <p class="card-text">{{ post.text|truncatechars:50 }}</p>
                             <strong><a href="{% url 'content:post_detail' username=post.user.username pk=post.pk %}" class="card-link">Читать полностью..</a></strong>
                         </div>
                     </div>
-                {% endfor %}
-            </div>
+                </div>
+            {% endfor %}
         </div>
     {% else %}
         <h1><strong>Нет постов</strong></h1>
