--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,29 +1,48 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<title>{% block title %}Название тут{% endblock %}</title>
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'CSS/styles.css' %}">
+    <title>{% block title %}Название тут{% endblock %}</title>
+</head>
+<body>
+    <nav id="navbar-example2" class="navbar navbar-expand-lg navbar-light bg-light px-3 mb-3 shadow-sm">
+        <a class="navbar-brand" href="{% url 'content:home' %}">Главная</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'content:create_post' user.username %}">Создать +</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auth/logout/">Выход</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'people:profile' request.user %}">{{ request.user }}</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/">API</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auth/login/">Вход</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auth/signup/">Регистрация</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
 
-<nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-  <a class="navbar-brand" href="{% url 'content:home' %}">Главная</a>
-  <ul class="nav nav-pills">
-    {% if user.is_authenticated %}
-    <li class="nav-item">
-      <a class="nav-link" href="{% url 'content:create_post' user.username %}">Создать +</a>
-    </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="/auth/logout/">Выход</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'people:profile' request.user %}">{{ request.user }}</a>
-      </li>
-    {% else %}
-      <li class="nav-item">
-        <a class="nav-link" href="/auth/login/">Вход</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/auth/signup/">Регистрация</a>
-      </li>
-    {% endif %}
-  </ul>
-</nav>
-
-{% block content %}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
+</body>
+</html>
